Updated the build script.

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 ###############################################################################
 # Module		: Ant Build Script
 # Author		: Rohtash Singh (rohtash.singh@gmail.com)
-# Created On	: 08/30/2016
-# Updated On	: 08/30/2016
+# Created On	: 2016/08/30
+# Updated On	: 2016/08/30
 # Version		: 1.0.0
 # Description	: This script provides the required configuration to the build
 #				  which can be modified based on the configuration settings of 
@@ -74,8 +74,8 @@ javac.listfiles=false
 # The minimum source and target JRE versions of which the code is compatible 
 # (means required to run this application).
 ###############################################################################
-javac.source=1.6
-javac.target=1.6
+javac.source=1.8
+javac.target=1.8
 
 ###############################################################################
 # ant debubugging properties
@@ -97,8 +97,8 @@ ant.quiet=true
 sealed=true
 built-by=Rohtash Singh Lakra
 impl-vendor=Rohtash Singh Lakra
-impl-vendor-id=devmatre.com
-impl-version=1.0.1
+impl-vendor-id=RSLakra
+impl-version=1.0.0
 # specification details are same as the verdor details, so don't give separately.
 
 #deploy.dir=${basedir}/deploy-v${impl-version}
