updated readme file and java algos

--- a/pytheorem/Makefile
+++ b/pytheorem/Makefile
@@ -18,17 +18,17 @@ REMOVE_FILES := __pycache__
 
 # .PHONY defines parts of the makefile that are not dependant on any specific file
 # This is most often used to store functions
-.PHONY: help
-# .PHONY: help Makefile
+# .PHONY: help
+.PHONY: help Makefile
 
 # Defining an array variable
 # FILES = input output
 
 # Defines the default target that `make` will to try to make, or in the case of a phony target, execute the specified
 # commands. This target is executed whenever we just type `make`
-.DEFAULT_GOAL: help
+.DEFAULT_GOAL := help
 
-
+# all operations
 all: setup clean test run doc
 
 # The @ makes sure that the command itself isn't echoed in the terminal
