--- a/pytheorem/requirements.txt
+++ b/pytheorem/requirements.txt
@@ -11,6 +11,7 @@ gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==2.1.5
+parameterized==0.9.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 PyYAML==6.0.2
